# SDFGenFast

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  config.h.in
app/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  array1.h  array2.h  array3.h  hashgrid.h  hashtable.h  mesh_io.cpp  mesh_io.h  mesh_io_obj.cpp  mesh_io_stl.cpp  sdf_io.cpp  sdf_io.h  sdfgen_unified.cpp  sdfgen_unified.h  util.h  vec.h
cpu_lib/: CMakeLists.txt  makelevelset3.cpp  makelevelset3.h
gpu_lib/: CMakeLists.txt  makelevelset3_gpu.cu  makelevelset3_gpu.h
python/: sdfgen_py.cpp
python/examples/: basic_usage.py
python/tests/: test_sdfgen.py
tests/: CMakeLists.txt  benchmark_performance.cpp  cli_test_utils.cpp  cli_test_utils.h  test_ascii_stl.cpp  test_cli_backend.cpp  test_cli_errors.cpp  test_cli_formats.cpp  test_cli_modes.cpp  test_cli_output.cpp  test_cli_threads.cpp  test_correctness.cpp  test_file_io.cpp  test_mode1_legacy.cpp  test_obj_file_io.cpp  test_stl_file_io.cpp  test_thread_slice_ratios.cpp  test_utils.cpp  test_utils.h  test_vtk_output.cpp
tests/resources/: test_x3y4z5_ascii.stl  test_x3y4z5_bin.stl
tools/: BUILD_GUIDE.md  build.sh  build_with_vs.bat  configure.sh  configure_cmake.bat  setup_vs_env.bat
